# EDOPT

./: .gitignore  Dockerfile  LICENSE  README.md  config.ini  configCAR.ini  configDRAGON.ini  configGELATIN.ini  configMUSTARD.ini  configPOTTED.ini  configSUGAR.ini  configTOMATO.ini  docker-compose.yaml  superimpose.patch  superimposeroi.patch
code/: .gitignore  CMakeLists.txt  ROScommunication.h  comparison.h  erosdirect.h  erosplus.h  image_processing.h  luv_render.cpp  main.cpp  offline.cpp  projection.h  scarf.h
docker/Inivation/: Dockerfile
objects/: README.md
objects/car/: model.mtl  model.obj.mtl
objects/dragon/: Drogon.obj.mtl  dragon.obj.mtl
objects/gelatin2/: textured.obj.mtl
pbvs_panda/: cartesian_velocity_example_controller_6dof.cpp  cartesian_velocity_example_controller_6dof.h
results/dragon/: config.ini  pitch.csv  roll.csv  x.csv  y.csv  yaw.csv  z.csv
results/gelatin/: pitch.csv  roll.csv  x.csv  y.csv  yaw.csv  z.csv
scripts/: 6-dof-analysis.ipynb  extractGTfromJson.py  frames_to_events.py  plotObjects scarf-journal.py  plotObjects.py  plotResults.py
